need to fix horiz rule and stretched images

--- a/src/style.css
+++ b/src/style.css
@@ -18,17 +18,16 @@ body {
   padding: 2em;
   margin: 2rem 20 rem;
   background-color: #F5F5F5;
-  
 }
 
-nav {
+.nav--logo {
   box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
   width: 550px;
   padding: 0;
   margin: 0;
   background: #F55A5A;
   color: white;
-  height: 30%;
+  height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -38,16 +37,11 @@ nav {
 }
 
 /* max-width fixes a rendering issue in Safari */
-.nav--logo {
+.fa-globe-europe {
   max-width: 100px;
-  width: 50px;
-  height: 50px;
-}
-
-.nav--text {
-  display: inline;
-  white-space: nowrap;
-  padding-left: .5rem;
+  width: 30px;
+  height: 30px;
+  margin-right: .5rem;
 }
 
 .cards-list {
@@ -71,7 +65,7 @@ img {
 
 .card {
   padding: 0;
-  margin: 36px auto 0 auto;
+  margin: 24px auto 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -96,6 +90,7 @@ img {
   color: #F55A5A;
   width: 7px;
   height: 9.55px;
+  font-size: 10.24px;
 }
 
 .card--pin-location {
@@ -111,7 +106,8 @@ img {
 
 a:link,
 a:visited {
-  font-size: 10.24px;    
+  font-size: 10.24px;
+  line-height: 12px;  
   color: #918E9B;
 }
 
@@ -119,7 +115,7 @@ a:visited {
   font-weight: bold;
   font-size: 25px;
   line-height: 30px;
-  margin: 12px 0 15px 0;
+  margin: 10px 0 15px 0;
   color: #2B283A
 }
 
@@ -144,4 +140,18 @@ a:visited {
   line-height: 12px;
   color: #2B283A;
   padding-top: 2px;
+}
+
+.divided {
+  display: flex;
+  align-items: center;
+}
+
+.divider {
+  flex-grow: 1;
+  border-bottom: 1px solid pink;
+  margin: 5px;
+}
+.card + .card {
+    border-top: 1px solid rgb(126, 243, 43);
 }
